# internal/app/api/interface/handler/session.go
@@ -1,7 +1,9 @@
 package handler
 
 import (
+	stderr "errors"
 	"net/http"
+	"strings"
 
 	"github.com/atsumarukun/holos-api-pkg/errors"
 	"github.com/gin-gonic/gin"
@@ -13,6 +15,8 @@ import (
 	"github.com/atsumarukun/holos-account-api/internal/app/api/interface/schema"
 	"github.com/atsumarukun/holos-account-api/internal/app/api/usecase"
 )
+
+var ErrInvalidToken = stderr.New("invalid token")
 
 type SessionHandler interface {
 	Create(*gin.Context)
@@ -33,13 +37,13 @@ func NewSessionHandler(sessionUC usecase.SessionUsecase) SessionHandler {
 func (h *sessionHandler) Create(c *gin.Context) {
 	var req schema.CreateSessionRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
-		hdlerr.Handle(c, errors.Wrap(err, errors.CodeBadRequest, "failed to login"))
+		hdlerr.Handle(c, errors.Wrap(err, errors.CodeBadRequest, "failed to create session"))
 		return
 	}
 
 	ctx := c.Request.Context()
 
-	session, err := h.sessionUC.Login(ctx, req.AccountName, req.Password)
+	session, err := h.sessionUC.Create(ctx, req.AccountName, req.Password)
 	if err != nil {
 		hdlerr.Handle(c, err)
 		return
@@ -51,13 +55,13 @@ func (h *sessionHandler) Create(c *gin.Context) {
 func (h *sessionHandler) Delete(c *gin.Context) {
 	accountID, err := parameter.GetContextParameter[uuid.UUID](c, "accountID")
 	if err != nil {
-		hdlerr.Handle(c, errors.Wrap(err, errors.CodeUnauthenticated, "failed to logout"))
+		hdlerr.Handle(c, errors.Wrap(err, errors.CodeUnauthenticated, "failed to delete session"))
 		return
 	}
 
 	ctx := c.Request.Context()
 
-	if err := h.sessionUC.Logout(ctx, accountID); err != nil {
+	if err := h.sessionUC.Delete(ctx, accountID); err != nil {
 		hdlerr.Handle(c, err)
 		return
 	}
@@ -66,19 +70,21 @@ func (h *sessionHandler) Delete(c *gin.Context) {
 }
 
 func (h *sessionHandler) Verify(c *gin.Context) {
-	accountID, err := parameter.GetContextParameter[uuid.UUID](c, "accountID")
-	if err != nil {
-		hdlerr.Handle(c, errors.Wrap(err, errors.CodeUnauthenticated, "failed to authorize"))
+	sessionToken := strings.Split(c.Request.Header.Get("Authorization"), " ")
+	if len(sessionToken) != 2 || sessionToken[0] != "Session" {
+		err := errors.Wrap(ErrInvalidToken, errors.CodeUnauthenticated, "failed to verify")
+		hdlerr.Handle(c, err)
+		c.Abort()
 		return
 	}
 
 	ctx := c.Request.Context()
 
-	account, err := h.sessionUC.Authorize(ctx, accountID)
+	account, err := h.sessionUC.Verify(ctx, sessionToken[1])
 	if err != nil {
 		hdlerr.Handle(c, err)
 		return
 	}
 
-	c.JSON(http.StatusOK, builder.ToAauthorizationResponse(account))
+	c.JSON(http.StatusOK, builder.ToVerifiedSessionResponse(account))
 }
